@@ -1,20 +1,31 @@
 package org.team14.webty.review.service;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
 import java.util.stream.Collectors;
 
-import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.team14.webty.review.dto.FeedReviewPageResponse;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.team14.webty.common.exception.BusinessException;
+import org.team14.webty.common.exception.ErrorCode;
+import org.team14.webty.review.dto.FeedReviewDetailResponse;
 import org.team14.webty.review.dto.FeedReviewResponse;
 import org.team14.webty.review.dto.ReviewRequest;
-import org.team14.webty.review.dto.SearchReviewResponse;
 import org.team14.webty.review.entity.Review;
+import org.team14.webty.review.mapper.ReviewMapper;
 import org.team14.webty.review.repository.ReviewRepository;
+import org.team14.webty.reviewComment.dto.CommentResponse;
+import org.team14.webty.reviewComment.entity.ReviewComment;
+import org.team14.webty.reviewComment.mapper.ReviewCommentMapper;
+import org.team14.webty.reviewComment.repository.ReviewCommentRepository;
+import org.team14.webty.security.authentication.AuthWebtyUserProvider;
+import org.team14.webty.security.authentication.WebtyUserDetails;
+import org.team14.webty.user.entity.WebtyUser;
 import org.team14.webty.webtoon.entity.Webtoon;
 import org.team14.webty.webtoon.repository.WebtoonRepository;
 
@@ -26,113 +37,150 @@ import lombok.RequiredArgsConstructor;
 public class ReviewService {
 	private final ReviewRepository reviewRepository;
 	private final WebtoonRepository webtoonRepository;
-	private final ModelMapper modelMapper;
+	private final ReviewCommentRepository reviewCommentRepository;
+	private final AuthWebtyUserProvider authWebtyUserProvider;
 
-	// id로 조회하기
-	public FeedReviewResponse getFeedReview(Long id) {
+	// 리뷰 상세 조회
+	@Transactional(readOnly = true)
+	public FeedReviewDetailResponse getFeedReview(Long id, @RequestParam(defaultValue = "0") int page,
+		@RequestParam(defaultValue = "10") int size) {
+		Pageable pageable = PageRequest.of(page, size);
 		Review review = reviewRepository.findById(id)
-			.orElseThrow(() -> new IllegalArgumentException("존재하지 않는 reviewId"));
+			.orElseThrow(() -> new BusinessException(ErrorCode.REVIEW_NOT_FOUND));
+		Page<ReviewComment> comments = reviewCommentRepository.findAllByReviewIdOrderByDepthAndCommentId(id, pageable);
+		Page<CommentResponse> commentResponses = comments.map(ReviewCommentMapper::toResponse);
+		review.plusViewCount(); // 조회수 증가
+		return ReviewMapper.toDetail(review, commentResponses);
+	}
 
-		review.plusViewCount();
+	// 전체 리뷰 조회
+	@Transactional(readOnly = true)
+	public Page<FeedReviewResponse> getAllFeedReviews(int page, int size) {
+		Pageable pageable = PageRequest.of(page, size);
+		// 모든 리뷰 조회
+		Page<Review> reviews = reviewRepository.findAll(pageable);
+
+		// 모든 리뷰 ID 리스트 추출
+		List<Long> reviewIds = reviews.stream().map(Review::getReviewId).toList();
+
+		// 리뷰 ID 리스트를 기반으로 한 번의 쿼리로 모든 댓글 조회
+		Map<Long, List<CommentResponse>> commentMap = getreviewMap(
+			reviewIds);
+
+		return reviews.map(review ->
+			ReviewMapper.toResponse(review,
+				commentMap.getOrDefault(review.getReviewId(), Collections.emptyList()))
+		);
+	}
+
+	// 리뷰 생성
+	public Long createFeedReview(WebtyUserDetails webtyUserDetails, ReviewRequest reviewRequest) {
+		WebtyUser webtyUser = getAuthenticatedUser(webtyUserDetails);
+
+		Webtoon webtoon = webtoonRepository.findById(reviewRequest.getWebtoonId())
+			.orElseThrow(() -> new BusinessException(ErrorCode.WEBTOON_NOT_FOUND));
+
+		Review review = ReviewMapper.toEntity(reviewRequest, webtyUser, webtoon);
 		reviewRepository.save(review);
-
-		return modelMapper.map(review, FeedReviewResponse.class);
+		return review.getReviewId();
 	}
 
-	//전체 리뷰 조회
-	public List<FeedReviewResponse> getAllFeedReviews() {
-		return reviewRepository.findAll().stream()
-			.map(review -> modelMapper.map(review, FeedReviewResponse.class))
-			.collect(Collectors.toList());
-	}
+	// 리뷰 삭제
+	public void deleteFeedReview(WebtyUserDetails webtyUserDetails, Long id) {
+		WebtyUser webtyUser = getAuthenticatedUser(webtyUserDetails);
 
-	//리뷰 생성
-	public FeedReviewResponse createFeedReview(ReviewRequest reviewRequest) {
-		Webtoon webtoon = webtoonRepository.findById(reviewRequest.getWebtoon().getWebtoonId())
-			.orElseThrow(() -> new IllegalArgumentException("존재하지 않는 webtoonId"));
-
-		Review review = Review.builder()
-			.content(reviewRequest.getContent())
-			.title(reviewRequest.getTitle())
-			.isSpoiler(reviewRequest.getIsSpoiler())
-			.webtoon(webtoon)
-			.build();
-
-		Review savedReview = reviewRepository.save(review);
-
-		return modelMapper.map(savedReview, FeedReviewResponse.class);
-	}
-
-	//리뷰 삭제
-	public void deleteFeedReview(Long id) {
 		Review review = reviewRepository.findById(id)
-			.orElseThrow(() -> new IllegalArgumentException("존재하지 않는 reviewId")); // or custom exception
+			.orElseThrow(() -> new BusinessException(ErrorCode.REVIEW_NOT_FOUND));
+
+		if (!review.getUser().getUserId().equals(webtyUser.getUserId())) {
+			throw new BusinessException(ErrorCode.REVIEW_PERMISSION_DENIED);
+		}
+
+		// 해당 리뷰에 달린 댓글 삭제 처리
+		reviewCommentRepository.deleteAll(reviewCommentRepository.findAllByReviewIdOrderByParentCommentIdAndDepth(id));
 		reviewRepository.delete(review);
 	}
 
-	//리뷰 수정
-	public FeedReviewResponse updateFeedReview(Long id, ReviewRequest reviewRequest) {
-		Optional<Review> existingReview = reviewRepository.findById(id);
-		if (existingReview.isPresent()) {
-			Review updatedReview = existingReview.get();
-			updatedReview.setContent(reviewRequest.getContent());
-			updatedReview.setTitle(reviewRequest.getTitle());
-			updatedReview.setSpoilerStatus(reviewRequest.getIsSpoiler());
+	// 리뷰 수정
+	public Long updateFeedReview(WebtyUserDetails webtyUserDetails, Long id,
+		ReviewRequest reviewRequest) {
+		WebtyUser webtyUser = getAuthenticatedUser(webtyUserDetails);
 
-			Webtoon webtoon = webtoonRepository.findById(reviewRequest.getWebtoon().getWebtoonId())
-				.orElseThrow(() -> new IllegalArgumentException("존재하지 않는 webtoonId"));
-			updatedReview.setWebtoon(webtoon);
+		Review review = reviewRepository.findById(id)
+			.orElseThrow(() -> new BusinessException(ErrorCode.REVIEW_NOT_FOUND));
 
-			Review savedReview = reviewRepository.save(updatedReview);
-			return modelMapper.map(savedReview, FeedReviewResponse.class);
+		Webtoon webtoon = webtoonRepository.findById(reviewRequest.getWebtoonId())
+			.orElseThrow(() -> new BusinessException(ErrorCode.WEBTOON_NOT_FOUND));
 
+		if (!review.getUser().getUserId().equals(webtyUser.getUserId())) {
+			throw new BusinessException(ErrorCode.REVIEW_PERMISSION_DENIED);
 		}
-		return null;
+
+		review.updateReview(reviewRequest.getTitle(), reviewRequest.getContent(), reviewRequest.getSpoilerStatus(),
+			webtoon);
+		reviewRepository.save(review);
+
+		return review.getReviewId();
 	}
 
 	// 특정 사용자의 리뷰 목록 조회
-	public List<SearchReviewResponse> getReviewsByUser(Long userId) {
-		return reviewRepository.findByUser_UserId(userId).stream()
-			.map(review -> modelMapper.map(review, SearchReviewResponse.class))
+	public List<FeedReviewResponse> getReviewsByUser(WebtyUserDetails webtyUserDetails) {
+		WebtyUser webtyUser = getAuthenticatedUser(webtyUserDetails);
+
+		List<Review> reviews = reviewRepository.findReviewByWebtyUser(webtyUser);
+		List<Long> reviewIds = reviews.stream().map(Review::getReviewId).toList();
+		List<ReviewComment> reviewComments = reviewCommentRepository.findAllByReviewIds(reviewIds);
+
+		return reviews.stream()
+			.map(review -> {
+				List<CommentResponse> comments = reviewComments.stream()
+					.filter(comment -> comment.getReview().getReviewId().equals(review.getReviewId()))
+					.map(ReviewCommentMapper::toResponse)
+					.collect(Collectors.toList());
+				return ReviewMapper.toResponse(review, comments);
+			})
 			.collect(Collectors.toList());
 	}
 
 	// 조회수 내림차순으로 모든 리뷰 조회
-	public List<SearchReviewResponse> getAllReviewsOrderByViewCountDesc() {
-		return reviewRepository.findAllOrderByViewCountDesc().stream()
-			.map(review -> modelMapper.map(review, SearchReviewResponse.class))
-			.collect(Collectors.toList());
+	@Transactional(readOnly = true)
+	public Page<FeedReviewResponse> getAllReviewsOrderByViewCountDesc(int page, int size) {
+		Pageable pageable = PageRequest.of(page, size);
+		Page<Review> reviews = reviewRepository.findAllByOrderByViewCountDesc(pageable);
+
+		// 모든 리뷰 ID 리스트 추출
+		List<Long> reviewIds = reviews.stream().map(Review::getReviewId).toList();
+
+		// 리뷰 ID 리스트를 기반으로 한 번의 쿼리로 모든 댓글 조회
+		Map<Long, List<CommentResponse>> commentMap = getreviewMap(
+			reviewIds);
+
+		return reviews.map(review ->
+			ReviewMapper.toResponse(review,
+				commentMap.getOrDefault(review.getReviewId(), Collections.emptyList()))
+		);
 	}
 
 	// 특정 사용자의 리뷰 개수 조회
-	public Long getReviewCountByUser(Long userId) {
-		return reviewRepository.countByUser_UserId(userId);
+	@Transactional(readOnly = true)
+	public Long getReviewCountByUser(WebtyUserDetails webtyUserDetails) {
+		WebtyUser webtyUser = getAuthenticatedUser(webtyUserDetails);
+		return reviewRepository.countReviewByWebtyUser(webtyUser);
 	}
 
-	// private FeedReviewResponse convertToFeedReviewResponse(Review review) {
-	// 	return modelMapper.map(review, FeedReviewResponse.class);
-	// }
+	private Map<Long, List<CommentResponse>> getreviewMap(List<Long> reviewIds) {
+		List<ReviewComment> allComments = reviewCommentRepository.findAllByReviewIds(reviewIds);
 
-	// 특정 사용자의 리뷰 목록 조회
-	public FeedReviewPageResponse getReviewsByUser(Long userId, Pageable pageable) {
-		Page<Review> reviews = reviewRepository.findByUser_UserId(userId, pageable);
-
-		// ModelMapper를 이용하여 Page<Review>를 Page<FeedReviewResponse>로 변환
-		Page<FeedReviewResponse> feedReviewResponses = reviews.map(
-			review -> modelMapper.map(review, FeedReviewResponse.class));
-
-		return FeedReviewPageResponse.from(feedReviewResponses);
+		// 리뷰 ID를 기준으로 댓글을 매핑하는 Map 생성
+		Map<Long, List<CommentResponse>> commentMap = allComments.stream()
+			.collect(Collectors.groupingBy(
+				comment -> comment.getReview().getReviewId(),
+				Collectors.mapping(ReviewCommentMapper::toResponse, Collectors.toList())
+			));
+		return commentMap;
 	}
 
-	// public FeedReviewPageResponse getFeedReviews(Pageable pageable) {
-	// 	Page<Review> reviews = reviewRepository.findAll(pageable);
-	// 	Page<FeedReviewResponse> feedReviewResponses = reviews.map(this::convertToFeedReviewResponse);
-	// 	return FeedReviewPageResponse.from(feedReviewResponses);
-	// }
-	//
-	// public List<FeedReviewResponse> getAllFeedReviews() {
-	// 	return reviewRepository.findAll().stream()
-	// 		.map(this::convertToFeedReviewResponse)
-	// 		.collect(Collectors.toList());
-	// }
+	public WebtyUser getAuthenticatedUser(WebtyUserDetails webtyUserDetails) {
+		return authWebtyUserProvider.getAuthenticatedWebtyUser(webtyUserDetails);
+	}
 }
